[package]
name = "ib_self_encryption_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xor_name = "4.0.1"
docopt = "~0.9.0"
getrandom = { version = "0.2", features = ["js"] }
libc = "0.2.124"
rand = "0.7.3"
aes = "0.8.1"
bincode = "~1.3.3"
rand_chacha = "~0.3.1"
err-derive = "~0.3.1"
itertools = "~0.10.0"
ibe = "0.1.4"

[dependencies.brotli]
version = "~3.3.0"
default-features = false
features = [ "std" ]

[dependencies.cbc]
version = "~0.1.1"
features = [ "alloc", "block-padding" ]

[dependencies.bytes]
version = "1.1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "sync", "io-util", "rt", "rt-multi-thread"]

[lib]
crate-type = ["cdylib"]
